# CopiumLottery

./: Anchor.toml  README.md  package.json
app_new/: package-lock.json  package.json
app_new/src/: App.tsx  copium_lottery.json
programs/solotery/: Cargo.toml
programs/solotery/src/: lib.rs
tests/: createLotery.ts  mintSPL.ts
