[package]
name = "CopiumLottery"
version = "1.0.0"
description = "A simple lotery implemented in the solana blockchain for Copium Token"
edition = "2021"
authors = ["Duke Sun <dukesun99@icloud.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "copium_lottery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
oorandom = "11.1.3"
